<resources>
    <string name="app_name">Grocery Sample</string>

    <!--Catalog Page-->
    <string name="catalog__title">Products</string>
    <string name="catalog__message_empty_title">"Aw Ow! You Come Late "</string>
    <string name="catalog__message_empty_description">Seems all stuffs finished right now ☹️\nCome back tomorrow for the new products</string>

    <!--Product Details Page-->
    <string name="product_details__description_place_holder">This product has no description</string>
    <string name="product_details__title">Product Details</string>
    <string name="product_details__add_to_basket">Add to Basket</string>
    <string name="product_details__message_added_to_basket">Product Added to Basket</string>

    <!--General Resources-->
    <string name="general__error_connection_title">Something went wrong 🧐</string>
    <string name="general__error_connection_description">An error occurred during processing your request\nplease try again later</string>
    <string name="general__try_again">Try Again</string>

    <!--Content Descriptions-->
    <string name="cd__back">"Navigate Back"</string>
    <string name="cd__product_image">Product image</string>
    <string name="cd__basket_image">Basket Image</string>
    <string name="cd__no_connection">No Connection Image</string>

</resources>